# uvasolutions

./: .gitignore  README.md
00102 - Ecological Bin Packing/: Main.java
00113 - Power of Cryptography/: main.cpp
00114 - Simulation Wizardry/: Main.java  main.c  out.txt
00119 - Greedy Gift Givers/: Main.java
00120 - Stack of Flapjacks/: Main.java
00136 - Ugly Numbers/: main.cpp
00139 - Telephone Tangles/: in.txt  main.py  out.txt
00141 - The Spot Game/: main.cpp
00144 - Student Grants/: main.py
00145 - Gondwanaland Telecom/: main.py
00152 - Tree's a Crowd/: Main.java
00156 - Anagrams/: Main.java
00161 - Traffic Lights/: Main.java
00162 - Beggar My Neighbour/: input.txt  input1.txt  solution.py
00170 - Clock Patience/: main.py
00187 - Transaction Processing/: in1.txt  main.py
00214 - Code Generation/: main.cpp
00220 - Othello/: Main.java
00227 - Puzzle/: Main.java
00230 - Borrowers/: main.cpp
00232 - Crossword Answers/: Main.java
00253 - Cube Painting/: Main.java
00255 - Correct Move/: in1.txt  main.c
00272 - TEX Quotes/: main.c
00278 - Chess/: main.cpp
00299 - Train Swapping/: Main.java
00300 - Maya Calendar/: in.txt  main.py  out.txt
00333 - Recognize Good ISBNs/: in.txt  main.py  out.txt
00335 - Processing MX Records/: input.txt  main.py
00337 - Interpreting Control Sequences/: input.txt  main.cpp  out.txt
10961 - Chasing After Don Giovanni/: CMakeLists.txt  GameGui.cpp  GameGui.h  Location.h  Vector.h  VectorTests.cpp  input.txt  main.cpp  solution.cpp
11172/: main.c
untitled/: CMakeLists.txt  main.cpp
(+259 files in other folders)
